--- a/index.css
+++ b/index.css
@@ -1,19 +1,44 @@
 body,
 .row {
 	background-color: #121212;
-	overflow: hidden;
+  overflow-y: scroll;
+  overflow-x: hidden;
 	height: 120vh;
 	width: 100vw;
 }
-body {
-  overflow-y: scroll;
-  overflow-x: hidden;
+#short
+{
+  height: 10%;
+}
+#logos
+{
+  display: block;
+    margin-left: auto;
+    margin-right: auto
+}
+.bs-example{
+  margin: 10%;
 }
 
 
 .bg-black {
     background-color:white;
 }
+.container-fluid1{
+  padding: 3% 20%;
+  text-align: center;
+}
+#white-section {
+  background-color: black;
+  color: white;
+  margin-top: 0px !important;
+}
+
+.social-icon {
+  margin: 30px 10px;
+color:white;
+}
+
 
 
 
@@ -64,9 +89,7 @@ span {
   margin: 30px 10px;
 }
 @media only screen and (max-width: 800px) {
-  #losr {
-    margin-bottom: 5%;;
-  }
+  
   .nm
   {
     
@@ -88,5 +111,5 @@ and (max-device-width : 980px {
 #sum
 {
     height: 80%;
-    padding-top: 10%;
+    
 }
