Setup mode switch in realtime

--- a/public/orientation.css
+++ b/public/orientation.css
@@ -6,6 +6,12 @@ body,
 	height: 120vh;
 	width: 100vw;
 }
+#interact-div {
+	overflow: hidden;
+}
+#interact-div > iframe {
+	overflow: auto;
+}
 #short {
 	height: 10vh;
 	overflow: hidden;
