--- a/public/orientation.css
+++ b/public/orientation.css
@@ -6,6 +6,18 @@ body,
 	height: 120vh;
 	width: 100vw;
 }
+
+#signed-out-div,
+#sign-in-div {
+	height: 90vh;
+}
+#interact-div {
+	overflow: hidden;
+}
+
+#interact-div > iframe {
+	overflow: auto;
+}
 #short {
 	height: 10vh;
 	overflow: hidden;
@@ -86,6 +98,10 @@ span {
 	}
 	.container-fluid1 {
 		padding: 3% 10%;
+	}
+	#signed-out-div,
+	#sign-in-div {
+		height: auto;
 	}
 }
 @media only screen and (min-device-width: 770px) and {
