--- a/public/comingSoon.css
+++ b/public/comingSoon.css
@@ -4,6 +4,11 @@
 	box-sizing: border-box;
 }
 
+#lol1
+{
+	padding-top: 10%;
+}
+
 body,
 html {
 	height: 100%;
@@ -93,7 +98,7 @@ body {
 .middle {
 	position: absolute;
 
-	top: 30%;
+	top: 34%;
 	left: 50%;
 	transform: translate(-50%, -50%);
 	text-align: center;
@@ -125,6 +130,7 @@ body {
 	}
 	.middle {
 		margin-top: 30%;
+		top: 40%;
 	}
 	#short {
 		height: 10%;
