--- a/public/comingSoon.css
+++ b/public/comingSoon.css
@@ -17,7 +17,7 @@ html {
 
 .bgimg {
 	background-image: url("12.jpg");
-	height: 70vh;
+	height: 90vh;
 	background-position: center;
 	background-size: cover;
 	position: relative;
@@ -132,11 +132,17 @@ body {
 		margin-top: 30%;
 		top: 40%;
 	}
+	#sumq
+	{
+		margin-top: 0px;
+		margin-bottom: 10px;
+	}
 	#short {
 		height: 10%;
 	}
 	#white-section {
 		height: auto;
+
 	}
 	.bgimg {
 		height: 100%;
@@ -147,8 +153,26 @@ body {
 	{
 		height: 30px;
 	}
+	#sumq
+	{
+		margin-top: 0px;
+		margin-bottom: 10px;
+	}
 	.middle
 	{
-      top: 41%;
+      top: 44%;
+	}
+	.sub
+	{
+		margin-bottom: 45px;
 	}
 }
+
+
+	#sumq
+	{
+		margin-top: 20px;
+	}
+	
+	
+ 
