--- a/public/orientation.css
+++ b/public/orientation.css
@@ -3,7 +3,7 @@ body,
 	background-color: #121212;
 	overflow-y: scroll;
 	overflow-x: hidden;
-	height: 120vh;
+/* 	height: 120vh; */
 	width: 100vw;
 }
 
